add_library(types_amr_obj OBJECT 
  arr_ncell_list_amr.c
  arr_nr_cells_amr.c
  arr_rf_ports_amr.c
  arr_rf_ports_amr.h
  arr_rx_channels_amr.c
  arr_rx_channels_amr.h
  arr_tx_channels_amr.c
  arr_tx_channels_amr.h
  channel_dl_amr.c
  channel_dl_amr.h
  CMakeLists.txt
  connected_mobility_amr.c
  connected_mobility_amr.h
  ecgi_amr.c
  ecgi_amr.h
  global_gnb_id_amr.c
  global_gnb_id_amr.h
  layers_amr.c
  layers_amr.h
  logs_amr.c
  logs_amr.h
  ncell_list_amr.c
  ncell_list_amr.h
  ncgi_amr.c
  ncgi_amr.h
  nr_cells_amr.c
  nr_cells_amr.h
  nssai_amr.c
  nssai_amr.h
  path_amr.c
  path_amr.h
  plmn_list_amr.c
  plmn_list_amr.h
  rf_ports_amr.c
  rf_ports_amr.h
  rx_channels_amr.c
  rx_channels_amr.h
  scell_list_amr.c
  scell_list_amr.h
  tx_channels_amr.c
  tx_channels_amr.h
  )

