add_library(types_amr_obj OBJECT 
arr_cell_amr.c
arr_cells_ue_lst_amr.c
arr_ncell_list_amr.c
arr_nr_cells_amr.c
arr_qos_flows_ue_lst_amr.c
arr_rf_ports_amr.c
arr_rf_ports_ms_amr.c
arr_rx_channels_amr.c
arr_tx_channels_amr.c
cell_amr.c
cells_ue_lst_amr.c
channel_dl_amr.c
connected_mobility_amr.c
counter_msgs_amr.c
counters_amr.c
cpu_amr.c
ecgi_amr.c
global_gnb_id_amr.c
layers_amr.c
logs_amr.c
ncell_list_amr.c
ncgi_amr.c
nr_cells_amr.c
nssai_amr.c
path_amr.c
plmn_list_amr.c
qos_flows_ue_lst_amr.c
rf_ports_amr.c
rf_ports_ms_amr.c
rx_channels_amr.c
scell_list_amr.c
tx_channels_amr.c
ue_lst.c
  )

